# proposer-commitment-network-dev

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
delegate-only-sidecar/: .env.example
delegate-only-sidecar/src/: main.rs
delegate-sidecar/: delegations.json
gateway/delegate-only-sidecar/src/: keystore.rs
gateway/src/onchain/: gateway.rs
gateway/src/utils/: mod.rs
helm-charts/: configmap.yaml  kustomization.yaml  servicemonitor.yaml
helm-charts/raw-helm-charts/: values.yaml
helm-charts/raw-helm-charts/templates/: commit-boost-deployment.yaml
interstate-cb-module/: Cargo.toml  Dockerfile  README.md  cb-config.toml
interstate-cb-module/.cargo/: config.toml
interstate-cb-module/src/: main.rs  metrics.rs  proofs.rs  server.rs  testutil.rs  types.rs
interstate-commit-boost-module/: Dockerfile  README.md  cb-config.toml
interstate-commit-boost-module/.cargo/: config.toml
interstate-commit-boost-module/src/: error.rs  main.rs  proofs.rs  server.rs  testutil.rs  types.rs
interstate-gateway/: .env.example  Cargo.toml  Dockerfile
interstate-gateway/delegate-only-sidecar/src/: main.rs
interstate-gateway/src/: main.rs
interstate-gateway/src/commitment/: mod.rs
interstate-gateway/src/config/: group_config.rs  mod.rs
interstate-gateway/src/crypto/: ecdsa.rs
interstate-gateway/src/delegation/: signing.rs  types.rs  web3signer.rs
interstate-gateway/src/state/: fetcher.rs  mod.rs  signature.rs
interstate-gateway/src/test_utils/: mod.rs
interstate-pbs-module/: .gitignore  Cargo.toml  Dockerfile  cb-config.toml
interstate-pbs-module/.cargo/: config.toml
interstate-pbs-module/src/: constraints.rs  main.rs
interstate-pbs-module/testdata/: signed_constraints_with_blob.json
interstate-sidecar/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
interstate-sidecar/delegate-only-sidecar/: Cargo.toml  delegations.json  delegations_web3.json
interstate-sidecar/delegate-only-sidecar/scripts/: Cargo.toml  README.md
interstate-sidecar/delegate-only-sidecar/scripts/delegate-sidecar/: Cargo.toml  README.md  delegations_web3.json
interstate-sidecar/delegate-only-sidecar/scripts/delegate-sidecar/src/: main.rs
interstate-sidecar/delegate-only-sidecar/scripts/revoke-sidecar/: Cargo.toml  delegations.json  delegations_web3.json
interstate-sidecar/delegate-only-sidecar/scripts/src/: cli.rs  delegate.rs  lib.rs  main.rs  revoke.rs
interstate-sidecar/delegate-only-sidecar/src/: main.rs  signer.rs  types.rs  web3signer.rs
interstate-sidecar/delegations/: delegations.json
interstate-sidecar/src/: main.rs
interstate-sidecar/src/builder/: constraint.rs
interstate-sidecar/src/common/: mod.rs  web3signer.rs
interstate-sidecar/src/common/dirk/: mod.rs
interstate-sidecar/src/config/: limits.rs  mod.rs
interstate-sidecar/src/constraints/: block_builder.rs  builder.rs  constraints_proxy_server.rs  mod.rs
interstate-sidecar/src/crypto/: mod.rs
interstate-sidecar/src/delegation/: cb_signer.rs  mod.rs  types.rs  web3signer.rs
interstate-sidecar/src/delegation/dirk/: distributed.rs  mod.rs  recover_signature.rs
interstate-sidecar/src/errors/: mod.rs
interstate-sidecar/src/keystores/: mod.rs
interstate-sidecar/src/metrics/: mod.rs
interstate-sidecar/src/state/: execution_client.rs  mod.rs  pricing.rs
interstate-sidecar/src/test_utils/: mod.rs
interstate-sidecar/src/utils/: mod.rs  score_cache.rs
k8/manifest/: external-secret.yaml
kubernetes/helm-charts/templates/: commit-boost-config-map.yaml
kubernetes/manifest/: README.md  service.yaml  values.yaml
mini-sidecar/src/: utils.rs
peripherals/builder-api-extend-module/: .env.example  Cargo.toml
peripherals/builder-api-extend-module/src/: auth.rs  builder.rs  error.rs  extender.rs  main.rs  server.rs  utils.rs
peripherals/constraints-collector/src/: collector.rs  constraints.rs  errors.rs  main.rs  server.rs
proposer-commitment-network/: Chart.yaml  README.md  README_HELM.md  values.yaml
proposer-commitment-network/templates/: commit-boost-service.yaml  configMap.yaml  deployment.yaml  service.yaml  sidecar-config-map.yaml  sidecar-deployment.yaml  sidecar-ingress.yaml  sidecar-service.yaml
revoke-sidecar/src/: main.rs
scripts/delegate-sidecar/: .env.example  Cargo.toml  README.md  delegations.json  delegations_cb.json
scripts/delegate-sidecar/src/: main.rs
scripts/revoke-sidecar/: .env.example
scripts/revoke-sidecar/src/: main.rs
sidecar/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  is-config.toml
sidecar/mock_data/keys/0x9612d7a727c9d0a22e185a1c768478dfe919cada9266988cb32359c11f2b7b27f4ae4040902382ae2910c15e2b420d07/: test-voting-keystore.json
sidecar/src/: main.rs
sidecar/src/builder/: constraint.rs  mod.rs
sidecar/src/commitment/: inclusion.rs  inclusion.tn.rs  misc.rs  mod.rs  request.rs
sidecar/src/config/: group_config.rs  limits.rs  mod.rs
sidecar/src/constraints/: block_builder.rs  builder.rs  constraints_proxy_server.rs  mod.rs  signature.rs
sidecar/src/crypto/: bls.rs  ecdsa.rs  mod.rs
sidecar/src/delegation/: mod.rs  web3signer.rs
sidecar/src/errors/: mod.rs
sidecar/src/keystores/: mod.rs
sidecar/src/metrics/: mod.rs
sidecar/src/onchain/: eigenlayer.rs  gateway.rs  mod.rs  test.rs
sidecar/src/state/: account_state.rs  execution.rs  execution_client.rs  fetcher.rs  mod.rs  pricing.rs  signature.rs
sidecar/src/test_utils/: mod.rs
sidecar/src/utils/: mod.rs  score_cache.rs  transactions.rs
sidecar/web3signer/keystore/: keystore-m_12381_3600_0_0_0-1733041966.json  validators.yaml
sidecar/web3signer/web3signer-25.2.0/licenses/: index.html
src/: main.rs
src/commitment/: mod.rs  request.rs
src/config/: group_config.rs  mod.rs
src/constraints/: block_builder.rs  builder.rs  constraint.rs  constraints_proxy_server.rs  mod.rs
src/controller/: mod.rs
src/errors/: mod.rs
src/state/: mod.rs
src/utils/: mod.rs
