[package]
name = "proposer-commitment-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-server = "0.7"
reqwest = "0.12"
futures = "0.3"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f55d43c" }
alloy = { version = "0.2.0", features = ["full", "provider-trace-api", "rpc-types-beacon", "rpc-types-engine"] }

serde_json = "1.0.115"
serde = {version = "1.0.215", features = ["derive"]}
lru = "0.12.3"

blst = "0.3.12"
secp256k1 = { version = "0.29.0", features = ["rand"] }


eyre = "0.6.12"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
parking_lot = "0.12.3"
rand = "0.8.5"
