[package]
name = "interstate-cb-module"
version = "0.1.0"
edition = "2021"

[dependencies]
# core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9.3"
futures = "0.3"
async-trait = "0.1.82"
eyre = "0.6.12"
thiserror = "1.0.63"
reqwest = "0.12.7"

# crypto
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e" }
tree_hash = "0.8"

# tracing & metrics
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
prometheus = "0.13.4"

# serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ethereum_ssz = "0.7.0"
ethereum_ssz_derive = "0.7.0"

# alloy
alloy = { version = "0.8.0", features = [
    "full",
    "rpc-types-beacon",
    "serde",
    "ssz",
    "getrandom",
    "providers",
] }
alloy-rlp = "0.3.10"

# commit-boost
# pinned to rev be able to bump alloy
cb-common = { git = "https://github.com/commit-boost/commit-boost-client", rev = "704e9f1" }
cb-pbs = { git = "https://github.com/commit-boost/commit-boost-client", rev = "704e9f1" }

# ethereum-consensus
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

# openssl
# openssl = { version = "0.10.64", features = ["vendored"] } 

# other
rand = "0.8.5"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
chrono = "0.4.38"
ssz_compat = { version = "0.5", package = "ethereum_ssz" }
types = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }