[package]
name = "interstate-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-server = "0.7"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
futures = "0.3"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "c326708" }
reth-primitives_v115 = { package="reth-primitives", git = "https://github.com/paradigmxyz/reth", rev = "cc8558f" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", version = "1.0.2" }
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

lighthouse_bls = { package = "bls", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }

alloy = { version = "0.6.4", features = [
  "full",
  "provider-trace-api",
  "rpc-types-beacon",
  "rpc-types-engine",
] }
alloy_v092 = { package="alloy", version = "0.9.2", features = ["full", "provider-trace-api", "rpc-types-beacon", "rpc-types-engine"] }
alloy-rpc-types-engine = { version = "0.6.4", default_features = false, features = ["jwt"] }


serde_json = "1.0.115"
serde = {version = "1.0.215", features = ["derive"]}
lru = "0.12.3"
async-trait = "0.1.79"

blst = "0.3.12"
secp256k1 = { version = "0.29.0", features = ["rand"] }
tree_hash = "0.5"
tree_hash_derive = "0.5"
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "ec3073e" }
ethereum_ssz = "0.5"

eyre = "0.6.12"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
parking_lot = "0.12.3"
rand = "0.8.5"
env-file-reader = "0.3.0"
regex = "1.10.5"
tokio-tungstenite = "0.24.0"
derive_more = "1.0.0"
clap = { version = "4.5.20", features = ["derive", "env"] }

metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15.3", features = [
  "http-listener",
] }
axum-client-ip = "0.6.1"
tower = "0.5.2"
tower-http = "0.6.2"
url = "2.5.4"
local-ip-address = "0.6.3"

[dev-dependencies]
alloy-node-bindings = "0.2.0"  
