[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
alloy = { version = "0.6", features = ["providers", "transports", "signers"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
rustls = "0.22"
blst = "0.3"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }
lighthouse_eth2_keystore = { package = "eth2_keystore", git = "https://github.com/sigp/lighthouse", rev = "a87f19d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
eyre = "0.6"
dotenv = "0.15.0"  # Add this line to your dependencies section

[net]
git-fetch-with-cli = true

[[bin]]
name = "scripts"
path = "src/main.rs"
